Fix MacOS window border radius, change behaviour of default Dark Mode to OS value

--- a/src/component/titlebar.css
+++ b/src/component/titlebar.css
@@ -1,5 +1,6 @@
 /*** Frame titlebar styles ***/
-#titlebar { display: flex; flex: 0 0 32px; max-height: 32px; background: black; -webkit-user-select: none; -webkit-app-region: drag; }
+#titlebar { display: flex; overflow: hidden; flex: 0 0 32px; max-height: 32px; background: black; -webkit-user-select: none; -webkit-app-region: drag; }
+.darwin #titlebar { border-top-left-radius: 4px; border-top-right-radius: 4px; }
 #title { display: inline-block; flex-grow: 1; padding: 8px 8px 8px 138px; color: white; font-size: 14px; text-align: center; }
 #titlebar.main-visible #title,
 #titlebar.reset-visible #title { padding-left: 92px; }
